--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "dependencies": {
     "@material-ui/core": "^3.9.3",
-    "axios": "^0.12.0",
+    "axios": ">=0.18.1",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
@@ -16,8 +16,10 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "bootstrap": "^4.3.1",
+    "braces": "^2.3.1",
     "cors": "^2.8.5",
     "lodash": "^4.17.11",
+    "open": "^6.0.0",
     "react": "^16.3.0",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.3.0",
@@ -28,7 +30,7 @@
     "redux-promise-middleware": "^3.2.0",
     "redux-thunk": "^2.1.0",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": ">=3.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
